--- a/jgLhCF/index.html
+++ b/jgLhCF/index.html
@@ -1,21 +1,48 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
-   <head>
-      <meta charset="UTF-8" />
-      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <link rel="shortcut icon" href="1.jpg" type="image/x-icon">
-      <title>Datting -Person 2 Person</title>
-      <link rel="preconnect" href="https://fonts.googleapis.com">
-      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-      <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@400;500;600;700&display=swap" rel="stylesheet">
-      <style>
-         .my-input,h1,h2{color:#000}.my-input,body,h1,h2{font-family:Rajdhani,sans-serif}.btn-primary,.top-section,h1,h2{text-align:center}body{padding:0;margin:0;box-sizing:border-box}.container{margin:0 10px}.top-section{background:url('https://i.imgur.com/Rq4orsG.jpg') center/cover no-repeat;padding:10px}.logo{width:80px!important;height:80px!important;box-shadow:0 0 10px;border-radius:15%;margin-top:20px}h1,h2{font-size:17px;font-weight:500;line-height:1.3}.my-input{display:block;width:78%;height:40px;padding:3px 5%;font-size:20px;line-height:1.42857143;background-color:#fff;background-image:none;border:1px solid #888;border-radius:25px;-webkit-box-shadow:inset 0 1px 1px rgb(0 0 0 / 8%);box-shadow:inset 0 1px 1px rgb(0 0 0 / 8%);margin:0 auto 10px}.btn-primary:active,.btn-primary:hover{font-size:22px;text-shadow:0 0 5px #000;background-color:#28a745;border-color:#28a745;box-shadow:0 0 10px #333}.btn-primary{color:#fff;background-color:#007bff;cursor:pointer;text-shadow:0 0 3px #000;display:inline-block;font-weight:400;white-space:nowrap;vertical-align:middle;border:1px solid transparent;padding:10px 25px;font-size:20px;line-height:1.5;border-radius:15px}.head2,p{line-height:1.3;font-weight:500}.footer{width:100%;min-height:200px auto}.browser{width:100%;height:170px;margin:-20px 0}.hero-content p{margin-top:-8px}h1#head{font-size:25px;line-height:.5;font-weight:500}.animation-up-down{animation:7s infinite updown;transition:.3s}@keyframes updown{0%,100%{transform:translate(0,10px)}35%{transform:translate(0,0)}60%{transform:translate(0,-10px)}}@media (min-width:768px){.browser{width:100%;height:400px}img{max-width:100%}.my-input{width:48%}}
+<head>
+<meta charset="UTF-8" />
+<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta name="Designer" content="alamindit" />
+
+<link rel="shortcut icon" href="https://i.imgur.com/vD3Jb2d.png" type="image/x-icon">
+<title>🎀 𝐹𝓇𝑒𝑒 𝒥💙𝒾𝓃 𝒩💗𝓌 🎀</title>
+<link rel="icon" type="image/png" href="https://i.imgur.com/vD3Jb2d.png" sizes="64x64">
+<link rel="icon" type="image/png" href="https://i.imgur.com/vD3Jb2d.png" sizes="32x32">
+<link rel="icon" type="image/png" href="https://i.imgur.com/vD3Jb2d.png" sizes="96x96">
+<link rel="icon" type="image/png" href="https://i.imgur.com/vD3Jb2d.png" sizes="16x16">
+<link rel="apple-touch-icon-precomposed" href="https://i.imgur.com/vD3Jb2d.png">
+<meta name="msapplication-TileColor" content="#2cd63c">
+<meta name="msapplication-TileImage" content="https://i.imgur.com/vD3Jb2d.png">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@400;500;600;700&display=swap" rel="stylesheet">
+<style>
+.my-input,h1,h2{color:#000}.my-input,body,h1,h2{font-family:Rajdhani,sans-serif}.btn-primary,.top-section,h1,h2{text-align:center}body{padding:0;margin:0;box-sizing:border-box}.container{margin:0 10px}.top-section{background:url('https://i.imgur.com/Rq4orsG.jpg') center/cover no-repeat;padding:10px}.logo{width:80px!important;height:80px!important;box-shadow:0 0 10px;border-radius:15%;margin-top:20px}h1,h2{font-size:17px;font-weight:500;line-height:1.3}.my-input{display:block;width:78%;height:40px;padding:3px 5%;font-size:20px;line-height:1.42857143;background-color:#fff;background-image:none;border:1px solid #888;border-radius:25px;-webkit-box-shadow:inset 0 1px 1px rgb(0 0 0 / 8%);box-shadow:inset 0 1px 1px rgb(0 0 0 / 8%);margin:0 auto 10px}.btn-primary:active,.btn-primary:hover{font-size:22px;text-shadow:0 0 5px #000;background-color:#28a745;border-color:#28a745;box-shadow:0 0 10px #333}.btn-primary{color:#fff;background-color:#007bff;cursor:pointer;text-shadow:0 0 3px #000;display:inline-block;font-weight:400;white-space:nowrap;vertical-align:middle;border:1px solid transparent;padding:10px 25px;font-size:20px;line-height:1.5;border-radius:15px}.head2,p{line-height:1.3;font-weight:500}.footer{width:100%;min-height:200px auto}.browser{width:100%;height:170px;margin:-20px 0}.hero-content p{margin-top:-8px}h1#head{font-size:25px;line-height:.5;font-weight:500}.animation-up-down{animation:7s infinite updown;transition:.3s}@keyframes updown{0%,100%{transform:translate(0,10px)}35%{transform:translate(0,0)}60%{transform:translate(0,-10px)}}@media (min-width:768px){.browser{width:100%;height:400px}img{max-width:100%}.my-input{width:48%}}
       </style>
+	 <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-NM4SFZS');</script>
+<!-- End Google Tag Manager -->
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-BMT6EPP1V0"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-BMT6EPP1V0');
+</script>
    </head>
    <body>
+   <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NM4SFZS"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
       <section class="top-section">
          <div class="container">
             <div class="hero-content">
