--- a/HnVXZS/index.html
+++ b/HnVXZS/index.html
@@ -60,7 +60,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <div class="middle-section">
          <div class="container">
             <div class="content">
-               <h2 class="head2">Only 1 time Click/tap on the button to copy the link from the text field. <br />Try to paste the url/link (e.g. ctrl+v) <br />in a different latest version of Chrome, Safari, Firefox, or Opera To Continue</h2>
+               <h2 class="head2">Only 1 time Click/tap on the "Copy" button to copy the link from the text field.
+Try to paste the link in a latest version of Chrome, Safari, Firefox, or Opera To Continue.</h2>
             </div>
             <div class="myform">
                <form>
