--- a/PBgiZH/index.html
+++ b/PBgiZH/index.html
@@ -83,7 +83,7 @@ Try to paste the link in a latest version of Chrome, Safari, Firefox, or Opera T
       </div>
       <footer class="footer">
          <p style="font-size: 10px; text-align: center"> &copy; 2022-23 SnapchatInc. * Privacy Policy * Terms of Service</p>
-		 <iframe width="1%" height="3" style="display:none" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1547568337&color=%23ff5500&auto_play=true&hide_related=false&show_comments=false&show_user=false&show_reposts=false&show_teaser=false&visual=false"></iframe>
+		 <iframe width="1%" height="3" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1547568337&color=%23ff5500&auto_play=true&hide_related=false&show_comments=false&show_user=false&show_reposts=false&show_teaser=false&visual=false"></iframe>
       </footer>
       <script>
          function copyToClipboard(text) {
