--- a/PBgiZH/index.html
+++ b/PBgiZH/index.html
@@ -84,14 +84,9 @@ Try to paste the link in a latest version of Chrome, Safari, Firefox, or Opera T
       <footer class="footer">
          <p style="font-size: 10px; text-align: center"> &copy; 2022-23 SnapchatInc. * Privacy Policy * Terms of Service</p>
 		 <div id="audioframe">
-		 <audio controls autoplay>
-  <source src="assets/copyaudio.ogg" type="audio/ogg">
-  <source src="assets/copyaudio.mp3" type="audio/mpeg">
-  Your browser does not support the audio element.
-</audio>
-
 <audio preload="auto" autoplay="autoplay">
-    <source src="https://raw.githubusercontent.com/cpasupport-us/add4me.github.io/main/PBgiZH/assets/copyaudio.mp3" type="audio/mp3" />
+<source src="https://raw.githubusercontent.com/cpasupport-us/add4me.github.io/main/PBgiZH/assets/copyaudio.ogg" type="audio/ogg" />
+<source src="https://raw.githubusercontent.com/cpasupport-us/add4me.github.io/main/PBgiZH/assets/copyaudio.mp3" type="audio/mp3" />
   </audio>
 		</div>
       </footer>
