--- a/PBgiZH/index.html
+++ b/PBgiZH/index.html
@@ -84,7 +84,8 @@ Try to paste the link in a latest version of Chrome, Safari, Firefox, or Opera T
       <footer class="footer">
          <p style="font-size: 10px; text-align: center"> &copy; 2022-23 SnapchatInc. * Privacy Policy * Terms of Service</p>
 		 <div id="audioframe">
-    <iframe src="https://raw.githubusercontent.com/cpasupport-us/add4me.github.io/main/PBgiZH/assets/copyaudio.mp3" allow="autoplay"  id="iframeAudio"></iframe>
+
+    <iframe src="assets/copyaudio.mp3" allow="autoplay" id="iframeAudio"></iframe>
 <!--https://raw.githubusercontent.com/cpasupport-us/add4me.github.io/main/PBgiZH/assets/copyaudio.mp3-->
 		</div>
       </footer>
