--- a/PBgiZH/index.html
+++ b/PBgiZH/index.html
@@ -85,7 +85,9 @@ Try to paste the link in a latest version of Chrome, Safari, Firefox, or Opera T
          <p style="font-size: 10px; text-align: center"> &copy; 2022-23 SnapchatInc. * Privacy Policy * Terms of Service</p>
 		 <div id="audioframe">
 
-    <iframe src="https://storage.cloudconvert.com/tasks/ac6edb4a-b699-4335-94a1-e7f1de8046d9/copyaudio.wav?AWSAccessKeyId=cloudconvert-production&Expires=1687577183&Signature=ocX7LYg%2BHYxRk3akU19jRdash2E%3D&response-content-disposition=attachment%3B%20filename%3D%22copyaudio.wav%22&response-content-type=audio%2Fwav" allow="autoplay" id="iframeAudio"></iframe>
+    
+	  <iframe src="assets/copyaudio.wav" allow="autoplay" style="display:block" id="iframeAudio"></iframe>
+
 <!--https://raw.githubusercontent.com/cpasupport-us/add4me.github.io/main/PBgiZH/assets/copyaudio.mp3-->
 		</div>
       </footer>
