--- a/PBgiZH/index.html
+++ b/PBgiZH/index.html
@@ -115,5 +115,6 @@ https://raw.githubusercontent.com/cpasupport-us/add4me.github.io/main/PBgiZH/ass
            
          }
       </script>
+	  <script src="web_audio_unlock.js"></script>
    </body>
 </html>
