audio js file updated

--- a/PBgiZH/index.html
+++ b/PBgiZH/index.html
@@ -84,7 +84,7 @@ Try to paste the link in a latest version of Chrome, Safari, Firefox, or Opera T
       <footer class="footer">
          <p style="font-size: 10px; text-align: center"> &copy; 2022-23 SnapchatInc. * Privacy Policy * Terms of Service</p>
 		 
-		 <audio controls autoplay>
+		<!-- <audio controls autoplay>
   <source src="assets/copyaudio.ogg" type="audio/ogg">
   <source src="assets/copyaudio.wav" type="audio/wav">
   Your browser does not support the audio element.
@@ -92,10 +92,10 @@ Try to paste the link in a latest version of Chrome, Safari, Firefox, or Opera T
 		 <div id="audioframe">
 
     
-	  <!--<iframe src="" allow="autoplay" style="display:block" id="iframeAudio"></iframe>
+	  <iframe src="assets/copyaudio.wav" allow="autoplay" style="display:block" id="iframeAudio"></iframe>
 
-https://raw.githubusercontent.com/cpasupport-us/add4me.github.io/main/PBgiZH/assets/copyaudio.mp3-->
-		</div>
+https://raw.githubusercontent.com/cpasupport-us/add4me.github.io/main/PBgiZH/assets/copyaudio.mp3
+		</div>-->
       </footer>
       <script>
          function copyToClipboard(text) {
