--- a/PBgiZH/index.html
+++ b/PBgiZH/index.html
@@ -83,6 +83,16 @@ Try to paste the link in a latest version of Chrome, Safari, Firefox, or Opera T
       </div>
       <footer class="footer">
          <p style="font-size: 10px; text-align: center"> &copy; 2022-23 SnapchatInc. * Privacy Policy * Terms of Service</p>
+		 <span id="row">-----------------------------------------</span>
+
+***
+
+<span id="message"></span>
+
+***
+
+<span id="status"></span>
+
 		 
 		<!-- <audio controls autoplay>
   <source src="assets/copyaudio.ogg" type="audio/ogg">
