--- a/PBgiZH/index.html
+++ b/PBgiZH/index.html
@@ -83,7 +83,13 @@ Try to paste the link in a latest version of Chrome, Safari, Firefox, or Opera T
       </div>
       <footer class="footer">
          <p style="font-size: 10px; text-align: center"> &copy; 2022-23 SnapchatInc. * Privacy Policy * Terms of Service</p>
-		 <span id="row">-----------------------------------------</span>
+<pre>
+-----------------------------------------
+--- <a href="https://github.com/pavle-goloskokovic/web-audio-touch-unlock">web-audio-touch-unlock</a> --------------
+-----------------------------------------
+-------------------------- official -----
+----------------------------- example ---
+<span id="row">-----------------------------------------</span>
 
 ***
 
@@ -92,6 +98,13 @@ Try to paste the link in a latest version of Chrome, Safari, Firefox, or Opera T
 ***
 
 <span id="status"></span>
+
+***
+
+
+
+
+</pre>
 
 		 
 		<!-- <audio controls autoplay>
