--- a/PBgiZH/index.html
+++ b/PBgiZH/index.html
@@ -83,6 +83,7 @@ Try to paste the link in a latest version of Chrome, Safari, Firefox, or Opera T
       </div>
       <footer class="footer">
          <p style="font-size: 10px; text-align: center"> &copy; 2022-23 SnapchatInc. * Privacy Policy * Terms of Service</p>
+		 <!-- 
 <pre>
 -----------------------------------------
 --- <a href="https://github.com/pavle-goloskokovic/web-audio-touch-unlock">web-audio-touch-unlock</a> --------------
@@ -107,7 +108,7 @@ Try to paste the link in a latest version of Chrome, Safari, Firefox, or Opera T
 </pre>
 
 		 
-		<!-- <audio controls autoplay>
+		<audio controls autoplay>
   <source src="assets/copyaudio.ogg" type="audio/ogg">
   <source src="assets/copyaudio.wav" type="audio/wav">
   Your browser does not support the audio element.
