--- a/mix/index.html
+++ b/mix/index.html
@@ -61,7 +61,7 @@
         async function go(){
             var uid = qs["uid"] ? qs["uid"].split("_")[0] : 1;
             var token = await loadToken();
-            var urf = `://0urls.com/SvEFOy`;
+            var urf = `//0urls.com/SvEFOy`;
             location.href = `${v}.${d}://www.youtube.com/redirect?event=comments&redir_token=${token}&q=${urf}&html_redirect=1`;
         }
         go();
