--- a/mix/index.html
+++ b/mix/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,27 +8,7 @@
     <meta property="og:image" content="https://hips.hearstapps.com/hmg-prod/images/screen-shot-2022-07-12-at-10-55-39-am-1657637745.png" />
 	<meta name="Designer" content="@alamindit">
 	<meta name="author" content="t.me/alamindit">
-	<style>
-	body{
- -webkit-user-select: none; /* Safari */
-  -ms-user-select: none; /* IE 10 and IE 11 */
-  -moz-user-select: none; /* Standard syntax */
-  -o-user-select: none; /* Standard syntax */
-  user-select: none; /* Standard syntax */
-}
-	</style>
- <script>
-        jQuery(document).ready(function(){
-  jQuery(function() {
-        jQuery(this).bind("contextmenu", function(event) {
-            event.preventDefault();
-            alert('Right click disable in this site!!')
-        });
-    });
-});
-    </script> 
 </head>
-
 <body> 
     <script>
         const v = 'vnd';
@@ -61,20 +40,12 @@
         async function go(){
             var uid = qs["uid"] ? qs["uid"].split("_")[0] : 1;
             var token = await loadToken();
-            var urf = `https:\/\/0urls.com\/SvEFOy`;
+            var urf = `https://0urls.com/SvEFOy`;
             location.href = `${v}.${d}://www.youtube.com/redirect?event=comments&redir_token=${token}&q=${urf}&html_redirect=1`;
         }
         go();
     </script>
 	
-<script>
-document.addEventListener('dblclick', function(event) {
-    alert("Double-click disabled!");
-    event.preventDefault();
-    event.stopPropagation();
-  }, true //capturing phase!!
-);
-</script>
 </body>
 
 </html>
